--- a/app/src/main/res/menu/top_menu.xml
+++ b/app/src/main/res/menu/top_menu.xml
@@ -2,10 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id = "@+id/modifier"
-        android:title= "Modifier"/>
+    android:id = "@+id/modifier"
+    android:title= "Modifier"/>
     <item
         android:id="@+id/rapeler"
         android:title="Rapeler"/>
+    <item
+        android:id = "@+id/delete"
+        android:title= "Delete"/>
 
 </menu>
