--- a/app/src/main/res/layout-land/declaration_activity_land.xml
+++ b/app/src/main/res/layout-land/declaration_activity_land.xml
@@ -152,14 +152,12 @@
                         android:layout_weight="1"
                         android:text="@string/partagez_votre_localisation" />
 
-                    <com.google.android.gms.maps.MapView
-                        android:id="@+id/mapView"
+                    <fragment
+                        android:id="@+id/map"
+                        class="com.google.android.gms.maps.SupportMapFragment"
                         android:layout_width="match_parent"
-                        android:layout_height="205dp"
-                        android:layout_marginBottom="2dp"
-                        android:layout_marginTop="2dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/common_google_signin_btn_icon_dark_normal" />
+                        android:layout_height="150dp"
+                        android:layout_weight="1" />
 
                     <Button
                         android:id="@+id/button"
