--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -31,7 +31,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.6"
-                    android:text="state"
+                    android:text="@string/state"
                     android:textColor="@color/text_gray" />
 
                 <TextView
@@ -46,65 +46,47 @@
                     android:id="@+id/importance"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.5"
+                    android:layout_weight="0.4"
                     android:gravity="right"
                     android:textColor="@color/text_gray" />
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/linear_name"
+            <TextView
+                android:id="@+id/category_view"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:textColor="#463939"
+                android:textSize="16sp"
+                tools:text="Catégorie :" />
 
-                <TextView
-                    android:id="@+id/name_view"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:textColor="#463939"
-                    android:textSize="16sp"
-                    tools:text="Prénom" />
-
-                <TextView
-                    android:id="@+id/phone_view"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:textColor="#463939"
-                    android:textSize="16sp"
-                    tools:text="Téléphone" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/linear_phone"
+            <TextView
+                android:id="@+id/title_view"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:orientation="horizontal">
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:text="@string/title"
+                android:textColor="#463939"
+                android:textSize="16sp"
+                tools:text="Titre : " />
 
+            <TextView
+                android:id="@+id/name_view"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:textColor="#463939"
+                android:textSize="16sp"
+                tools:text="Prénom : " />
 
-                <TextView
-                    android:id="@+id/category_view"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:textColor="#463939"
-                    android:textSize="16sp"
-                    tools:text="Catégorie" />
-
-                <TextView
-                    android:id="@+id/title_view"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="@string/title"
-                    android:textColor="#463939"
-                    android:textSize="16sp"
-                    tools:text="Titre" />
-
-            </LinearLayout>
+            <TextView
+                android:id="@+id/phone_view"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:textColor="#463939"
+                android:textSize="16sp"
+                tools:text="Téléphone : " />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -117,7 +99,7 @@
                     android:layout_height="100dp"
                     android:textColor="#463939"
                     android:textSize="16sp"
-                    tools:text="Description" />
+                    tools:text="Description :" />
 
                 <fragment
                     android:id="@+id/myMap"
