--- a/app/src/main/res/layout-land/change_event_item_land.xml
+++ b/app/src/main/res/layout-land/change_event_item_land.xml
@@ -5,8 +5,7 @@
     android:id="@+id/change_item"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".activity.ChangeEventActivity">
+    android:orientation="vertical">
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -196,7 +195,7 @@
                         android:layout_marginBottom="2dp"
                         android:layout_marginTop="2dp"
                         android:layout_weight="1"
-                        android:background="?android:attr/statusBarColor"
+                        android:background="@color/colorPrimary"
                         android:onClick="onclick"
                         android:text="@string/button"
                         tools:text="Valider" />
