--- a/app/src/main/res/layout-land/event_item_land.xml
+++ b/app/src/main/res/layout-land/event_item_land.xml
@@ -90,13 +90,13 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/description_view"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="80dp"
                     android:textColor="#463939"
                     android:textSize="16sp"
                     tools:text="Description :" />
@@ -107,6 +107,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="260dp"
                     android:layout_weight="1" />
+
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimary"
+                    android:text="Retour au tableau" />
 
             </LinearLayout>
 
