--- a/app/src/main/res/layout-land/homepage_fragment_land.xml
+++ b/app/src/main/res/layout-land/homepage_fragment_land.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,45 +14,29 @@
         android:backgroundTint="@color/colorPrimary"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/filtre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             android:layout_weight="0"
-            android:text="@string/filtre"
-            android:textColor="#fdfdfd"
-            android:textStyle="bold" />
+            android:background="?attr/colorPrimary"
+            android:fitsSystemWindows="true"
+            android:minHeight="?attr/actionBarSize"
+            app:navigationIcon="@drawable/ic_check_box_black_24dp"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
+            app:titleTextColor="@color/cardview_light_background">
 
-        <Spinner
-            android:id="@+id/Spinner_cate"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@android:drawable/btn_dropdown"
-            android:spinnerMode="dropdown">
+            <Spinner
+                android:id="@+id/Spinner_cate"
+                android:layout_width="180dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:spinnerMode="dropdown">
 
-        </Spinner>
+            </Spinner>
 
-        <TextView
-            android:id="@+id/tri"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="0"
-            android:text="@string/tri_par"
-            android:textColor="#fdfdfd"
-            android:textStyle="bold" />
+        </android.support.v7.widget.Toolbar>
 
-        <Spinner
-            android:id="@+id/Spinner_tri"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@android:drawable/btn_dropdown"
-            android:spinnerMode="dropdown">
-
-        </Spinner>
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
@@ -72,7 +56,8 @@
         android:layout_height="match_parent"
         android:layout_gravity="bottom|end"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        tools:layout_editor_absoluteY="0dp"
+        tools:ignore="MissingConstraints">
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
