--- a/app/src/main/res/layout/change_event_item.xml
+++ b/app/src/main/res/layout/change_event_item.xml
@@ -15,18 +15,25 @@
             android:id="@+id/linear"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
-            android:orientation="vertical"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp">
+            android:orientation="vertical">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_weight="0"
+                android:background="?attr/colorPrimary"
+                android:fitsSystemWindows="true"
+                android:minHeight="?attr/actionBarSize"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
+                app:titleTextColor="@color/cardview_light_background">
+            </android.support.v7.widget.Toolbar>
 
             <LinearLayout
-                android:background="@drawable/border_black"
                 android:id="@+id/linear_name"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginBottom="2dp"
-                android:layout_marginTop="5dp"
+                android:background="@drawable/border_black"
                 android:orientation="horizontal">
 
                 <TextView
@@ -94,11 +101,11 @@
             </android.support.design.widget.TextInputLayout>
 
             <LinearLayout
-                android:background="@drawable/border_black"
                 android:id="@+id/linear_category"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginBottom="2dp"
+                android:background="@drawable/border_black"
                 android:orientation="horizontal">
 
 
@@ -128,9 +135,9 @@
             <LinearLayout
                 android:id="@+id/linear_phone"
                 android:layout_width="match_parent"
-                android:background="@drawable/border_black"
                 android:layout_height="50dp"
                 android:layout_marginBottom="2dp"
+                android:background="@drawable/border_black"
                 android:orientation="horizontal">
 
                 <TextView
