change color of topMenu, and added icon

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,5 @@
     <color name="one">#1c90a2</color>
     <color name="two">#96d2e6</color>
     <color name="three">#61c4cf</color>
+    <color name="white">#ffffff</color>
 </resources>
