--- a/app/src/main/res/layout-land/activity_main_land.xml
+++ b/app/src/main/res/layout-land/activity_main_land.xml
@@ -33,7 +33,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/tab_bg"
+            android:background="@color/white"
             android:drawablePadding="3dp"
             android:drawableTop="@drawable/ic_insert_chart_black_24dp"
             android:gravity="center"
