--- a/app/src/main/res/menu/menu_sort.xml
+++ b/app/src/main/res/menu/menu_sort.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:anddroid="http://schemas.android.com/apk/res-auto">
+    <item android:title="Tri par : " />
     <item
         android:id="@+id/date_sort"
         android:icon="@drawable/ic_date"
-        android:title="Date" />
+        android:title="      Date" />
     <item
         android:id="@+id/state_sort"
         android:icon="@drawable/ic_schedule_black_24dp"
 
-        android:title="État" />
+        android:title="      État" />
     <item
         android:id="@+id/urgence_sort"
         android:icon="@drawable/ic_low_priority"
-        android:title="Urgence" />
+        android:title="      Urgence" />
 
 </menu>
