--- a/app/src/main/res/layout/declaration_activity.xml
+++ b/app/src/main/res/layout/declaration_activity.xml
@@ -60,8 +60,8 @@
                     android:id="@+id/Spinner_category"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_marginRight="100dp"
-                    android:layout_weight="0.5"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
                     android:background="@android:drawable/btn_dropdown"
                     android:spinnerMode="dialog"
                     tools:layout_editor_absoluteX="0dp"
@@ -90,8 +90,8 @@
                     android:id="@+id/Spinner_urgence"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_marginRight="100dp"
-                    android:layout_weight="0.5"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
                     android:background="@android:drawable/btn_dropdown"
                     android:spinnerMode="dialog"
                     tools:layout_editor_absoluteX="0dp"
@@ -138,31 +138,46 @@
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_weight="1">
-
-            </android.support.design.widget.TextInputLayout>
-
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/phone_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="@string/t_l_phone"
-                    android:inputType="phone" />
+                android:layout_height="match_parent"
+                android:layout_weight="0">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/assignee_name_input"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:hint="@string/destinataire"
                     android:inputType="text" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/assignee_phone_input"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:hint="@string/destinataire_telephone"
                     android:inputType="phone" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_weight="1">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/phone_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:hint="@string/t_l_phone"
+                    android:inputType="phone" />
+
+            </android.support.design.widget.TextInputLayout>
 
 
             <LinearLayout
