--- a/app/src/main/res/layout-land/change_event_item_land.xml
+++ b/app/src/main/res/layout-land/change_event_item_land.xml
@@ -170,42 +170,68 @@
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_weight="1">
+                android:layout_height="match_parent"
+                android:layout_weight="0">
 
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/phone_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:hint="@string/t_l_phone"
+                    android:inputType="phone" />
             </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/phone_input"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/t_l_phone"
-                android:inputType="phone" />
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/assignee_name_input"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/destinataire"
-                android:inputType="text" />
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/assignee_phone_input"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/destinataire_telephone"
-                android:inputType="phone" />
-
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/border_black"
+                android:layout_weight="0"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/import_contact_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    app:srcCompat="@drawable/ic_contact_phone_black_24dp" />
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/assignee_name_input"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:hint="@string/destinataire"
+                        android:inputType="text" />
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/assignee_phone_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:hint="@string/destinataire_telephone"
+                    android:inputType="phone" />
+            </android.support.design.widget.TextInputLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="50dp">
 
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/location"
@@ -224,7 +250,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/description_input"
                         android:layout_width="match_parent"
-                        android:layout_height="80dp"
+                        android:layout_height="match_parent"
                         android:layout_marginBottom="2dp"
                         android:hint="@string/description"
                         android:inputType="text" />
