--- a/app/src/main/res/layout-land/homepage_fragment_land.xml
+++ b/app/src/main/res/layout-land/homepage_fragment_land.xml
@@ -35,29 +35,64 @@
 
             </Spinner>
 
-            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/map"
-                class="com.google.android.gms.maps.SupportMapFragment"
-                android:layout_width="70dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="100dp"
-                android:layout_weight="1" />
 
         </android.support.v7.widget.Toolbar>
 
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerview"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="48dp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="130dp"
+            android:layout_marginTop="48dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/map"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.7"
+                android:background="@drawable/map"
+                android:clickable="true"
+                android:focusable="true"
+                android:contentDescription="TODO" />
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/rechercher"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:hint="Rechercher" />
+
+            <ImageButton
+                android:id="@+id/search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.1"
+                android:clickable="true"
+                android:focusable="true"
+                app:srcCompat="@drawable/ic_search_black_24dp" />
+
+        </LinearLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="0dp">
 
 
-    </android.support.v7.widget.RecyclerView>
+        </android.support.v7.widget.RecyclerView>
+
+    </LinearLayout>
 
     <com.getbase.floatingactionbutton.FloatingActionsMenu
         android:layout_width="match_parent"
@@ -76,6 +111,7 @@
             android:visibility="visible"
             app:backgroundTint="@color/colorPrimary"
             app:srcCompat="@android:drawable/ic_menu_edit" />
+
 
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
