--- a/app/src/main/res/layout/homepage_fragment.xml
+++ b/app/src/main/res/layout/homepage_fragment.xml
@@ -62,18 +62,12 @@
                 android:focusable="true"
                 android:contentDescription="TODO" />
 
-            <android.support.design.widget.TextInputLayout
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/rechercher"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="2">
-
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/rechercher"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="Rechercher" />
-
-            </android.support.design.widget.TextInputLayout>
+                android:layout_weight="2"
+                android:hint="Rechercher" />
 
             <ImageButton
                 android:id="@+id/search"
