wang wei > theo > arabes

--- a/app/src/main/res/layout-land/declaration_activity_land.xml
+++ b/app/src/main/res/layout-land/declaration_activity_land.xml
@@ -221,6 +221,14 @@
                     android:text="@string/partagez_votre_localisation"
                     android:textSize="16sp" />
 
+                <Switch
+                    android:id="@+id/locationcustomer"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:text="@string/partagez_votre_localisation"
+                    android:textSize="16sp" />
+
                 <fragment
                     android:id="@+id/map"
                     class="com.google.android.gms.maps.SupportMapFragment"
